--- a/src/features/sideMenu/components/navbar/Sidebar.module.css
+++ b/src/features/sideMenu/components/navbar/Sidebar.module.css
@@ -5,38 +5,12 @@
 }
 
 /* SIDEBAR MENUS AND ITEMS */
-.menu {
+.sidebar {
     position: absolute;
-    left: var(--nav-size);
-    transform: translateY(32%);
-    overflow: visible;
-
-    width: 24.5rem;
-    margin-left: 1rem;
-    padding: 0 0.4rem;
-
-    border-radius: 1rem;
-    box-shadow: 
-        0.2rem 0.2rem 0.75rem 0.1rem var(--color-main-shadow),
-        -0.05rem -0.05rem 0.25rem 0.05rem var(--color-main-shadow),
-        0.3rem 0.3rem 1rem 0.15rem var(--color-main-shadow-opposite) inset;
-
-    background-color: var(--color-main);
-}
-
-.menuSection {
-    margin: 0.5rem 2%;
-    padding: 0.35rem;
-    width: 95%;
-
-    transition: border var(--transition-duration);
-}
-
-.sectionHeader {
-    margin: 0.25rem 0 0.5rem 0;
-
-    font-size: 1rem;
-    font-weight: 400;
+    left: 0;
+    top: 0;
+    width: var(--nav-size);
+    height: fit-content;
 }
 
 
